# calgaryhacks2026-ibm-workshop

./: .env.example  1_intro.ipynb  2_stream.py  LICENSE  README.md  agentic_project_analyzer.ipynb  intro.ipynb  main.py  pyproject.toml
notebooks/: agentic_project_analyzer.ipynb  demo_output.md
scripts/: 1_intro.py  2_stream.py  3_langchain_chat.py  5_agentic_project_analyzer.py  agentic_project_analyzer.py  intro.py  langchain.py  langchain_agent.py  langchain_chat.py  stream.py
scripts/output/: demo_output.md
